[tool.poetry]
name = "colorifix interview"
version = "0.1.0"
description = "Jordan Juritz's code for Colorifix interview 24 Aug 2023."
authors = ["Jordan Juritz"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.0"
pandas = "^2.0.3"
numpy = "^1.25.2"
matplotlib = "^3.7.2"
jupyter = "^1.0.0"
scikit-learn = "^1.3.0"
plotly = "^5.16.1"
ipykernel = "^6.25.1"
statsmodels = "^0.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
